--- a/administration/templates/administration/informations.html
+++ b/administration/templates/administration/informations.html
@@ -14,9 +14,9 @@
                 {%csrf_token%}
                     <div  class="col-sm-4" style="margin-top: 20px;">
                         <select style="width: 100%" name="sel">
-                            <option value="all" selected>all Informations</option>
-                            <option value="reported informations"> only reported Informations</option>
-                            <option value="reported comments"> only reported Comments</option>
+                            <option value="all" {% if 'all' == current_info %}selected{% endif %}>all Informations</option>
+                            <option value="reported informations" {% if 'reported informations' == current_info %}selected{% endif %}> only reported Informations</option>
+                            <option value="reported comments" {% if 'reported comments' == current_info %}selected{% endif %}> only reported Comments</option>
                         </select>
                     </div>
 
