add show all button for users

--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -153,6 +153,8 @@
                                     </div>
                                 </div>
                             </div>
+                        {% empty %}
+                            <h4>No groups available. Create some.</h4>
                         {% endfor %}
                     {% endif %}
                 </div>
