beautify needs & info

--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -31,7 +31,7 @@
                                 <p class="list-group-item-text">{{ comment|get_short_text:160 }}</p>
                             </div>
                             <div class="col-sm-12">
-                                <h6><br>from: {{ comment.date }} / number of reports: </h6>
+                                <h6><br>from: {{ comment.date }} </h6>
                             </div>
                         </div>
                     </a>
