--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -1,6 +1,98 @@
 {% extends 'basics/base.html' %}
-
+{% load filter %}
 {% block content %}
+
+
+<!-- needs -->
+<div id="standard-modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <div class="row">
+                <div class="col-sm-12" style="padding: 15px">
+                    <h2 class="text-center" id="standard-modal-headline">Information</h2>
+                </div>
+                <form class="form" role="form" method="post" action="{% url 'basics:needs_all'%}" accept-charset="UTF-8">
+                  {%csrf_token%}
+                  <div class="col-sm-2" style="margin-top: 15px; margin-bottom: 15px;">
+                      <label> Range
+                        <select style="width: 100%" name="range">
+                          <option>5km</option>
+                          <option>20km</option>
+                          <option>40km</option>
+                        </select>
+                      </label>
+                  </div>
+                  <div class="col-sm-4" style="margin-top: 15px; margin-bottom: 15px;">
+                      <label> Cards per page
+                        <select style="width: 100%" name="category">
+                            <option value="{{ category.name }}">All</option>
+                        </select>
+                      </label>
+                  </div>
+                  <div  class="col-sm-4" style="margin-top: 15px; margin-bottom: 15px;">
+                      <label> Cards per page
+                        <select style="width: 100%" title="{{cards_per_page}}" name="cards_per_page">
+                            <option>1</option>
+                            <option>5</option>
+                            <option>10</option>
+                        </select>
+                      </label>
+                  </div>
+                  <div  class="col-sm-2" style="margin-top: 10px; margin-bottom: 10px;">
+                      <!-- TODO: MAKE BUTTON submit to send the form-->
+                      <input id="standard-grey-button-bold" type="button" class="btn btn-block btn-lg btn-primary" value="Filter"/>
+                  </div>
+                </form>
+            </div>
+        </div>
+        <div class="modal-body">
+            <div class="list-group">
+                {% if infos %}
+                    {% for info in infos %}
+
+                        <!-- list all needs -->
+                        <a class="list-group-item" id="standard-list-group-item-div">
+                            <div class="row">
+                                <div class="col-sm-12" data-toggle="modal" data-target=".{{ info.id }}">
+                                    <h4 class="list-group-item-heading">{{ info.headline }}</h4>
+                                    <p class="list-group-item-text">{{ info|get_short_text:160 }}</p>
+                                </div>
+                                <div class="col-sm-9" data-toggle="modal" data-target=".{{ need.id }}">
+                                    <h6><br>from: {{ info.date }} </h6>
+                                </div>
+                                <div class="col-sm-1">
+                                    <button type="button" id="{{ info.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:information_view' pk=info.id %}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-comment"></span> Comment</button>
+
+                                </div>
+                                <div class="col-sm-1"></div>
+                                {% if not user.userdata in info.reported_by.all %}
+                                <div class="col-sm-1">
+                                  <button type="button" id="{{ info.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_information' pk=info.id%}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
+                                </div>
+                                {% endif %}
+                            </div>
+                        </a>
+                    {% empty %}
+                        <h4>There are no needs.</h4>
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div><!-- end needs -->
+
+ <script>
+  function done_request(element){
+      var id = element.id;
+      console.log(id);
+      $.post("{% url 'administration:need_delete' %}", {id:id}, function(data){
+          //no need for this method but if we want to get a callback this is the correct position
+          location.href = "{% url 'administration:needs' %}";
+      });
+  }
+
+</script>
+
 <div class="row">
 
   <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
