--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -51,27 +51,30 @@
                     {% for info in infos %}
 
                         <!-- list all needs -->
-                        <a class="list-group-item" id="standard-list-group-item-div">
-                            <div class="row">
-                                <div class="col-sm-12" data-toggle="modal" data-target=".{{ info.id }}">
-                                    <h4 class="list-group-item-heading">{{ info.headline }}</h4>
-                                    <p class="list-group-item-text">{{ info|get_short_text:160 }}</p>
+                      <div class="list-group-item" id="standard-list-group-item-div">
+                        <div class="row">
+                            <a href="{% url 'basics:information_view' pk=info.id %}">
+                                <div class="col-sm-12">
+                                    <h4 class="list-group-item-heading" style="color: #333; hover.color: #333;">{{ info.headline }}</h4>
+                                    <p class="list-group-item-text" style="color: #555; hover.color: #555;">{{ info|get_short_text:160 }}</p>
                                 </div>
-                                <div class="col-sm-9" data-toggle="modal" data-target=".{{ need.id }}">
-                                    <h6><br>from: {{ info.date }} </h6>
-                                </div>
-                                <div class="col-sm-1">
-                                    <button type="button" id="{{ info.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:information_view' pk=info.id %}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-comment"></span> Comment</button>
 
+                                <div class="col-sm-9">
+                                    <h6 style="color: #555; hover.color: #555;"><br>from: {{ info.date }} / number of reports: {{ info.number_reports }}</h6>
                                 </div>
-                                <div class="col-sm-1"></div>
-                                {% if not user.userdata in info.reported_by.all %}
-                                <div class="col-sm-1">
-                                  <button type="button" id="{{ info.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_information' pk=info.id%}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
-                                </div>
-                                {% endif %}
+                            </a>
+                            <div class="col-sm-1">
+                                <button type="button" id="{{ info.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:information_view' pk=info.id %}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-comment"></span> Comment</button>
+
                             </div>
-                        </a>
+                            <div class="col-sm-1"></div>
+                            {% if not user.userdata in info.reported_by.all %}
+                            <div class="col-sm-1">
+                              <button type="button" id="{{ info.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_information' pk=info.id%}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
+                            </div>
+                            {% endif %}
+                        </div>
+                      </div>
                     {% empty %}
                         <h4>There are no needs.</h4>
                     {% endfor %}
@@ -92,7 +95,7 @@
   }
 
 </script>
-
+<!--
 <div class="row">
 
   <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
@@ -110,7 +113,7 @@
 
   </div>
   -->
-    <div class="btn-group">
+  <!--  <div class="btn-group">
       <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Range <span class="caret"></span>
       </button>
@@ -196,5 +199,5 @@
      </nav>
    </div>
  </div>
-
+-->
 {% endblock %}
